samples/_failures_safe/1761398508_afccee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1440fbca.c: In function ‘main’:
./samples/SAFE/__tmp_1440fbca.c:167:12: error: missing terminating " character
  167 |     printf("Enter expression to token
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1440fbca.c:167:5: error: expected expression at end of input
  167 |     printf("Enter expression to token
      |     ^~~~~~
./samples/SAFE/__tmp_1440fbca.c:167:5: error: expected declaration or statement at end of input
